- Added: You can now also select ranked mode with no weapons ranked (value 2 for d_with_ranked in description.ext or in params "Ranked:" values "Ranked mode on but weapons not ranked")
- Added: New main target "events" for non-TvT with optional complex mission scenarios embedded in maintarget (first "event" scenario Blackhawk Down rescue), by longtimegamer
- Changed: Removed jump flags created at seized main targets in the TT version
- Changed: If disable TI or disable NVG is turned on in the server lobby launchers sight will be blocked when either NV or TI mode is used
- Changed: Enabled simulation on base flags again to show flags (if it really is a flag)
- Changed: Russian translation updated, by Babayka
- Changed: Award points, for example points a player gets for destroying a barrack building, can now be changed in d_addscore_a array (available in initcommon.sqf and database dom_settings table). Only available in ranked and database mode
- Changed: Removed d_with_targetselect/"Players can select next main target:" and integrated it in d_with_targetselect_count/"Players can select from available targets:"
- Changed: There is now also an enemy AI vehicle MHQ at main targets in the TT version like it is in the normal coop version
- Fixed: When using earplugs in the TT version a dialog error appeared because of a missing gui baseclass
- Fixed: Heli lift script did break with an error message when the mass of the lift object was lower than the max load of the chopper
- Fixed: When a player changed the TeamSwitch key in the A3 settings when the mission was running the mission didn't pick up the new key
- Fixed: Added missing items like goggles in Virtual Arsenal in ranked mode
- Fixed: Some colors in the game class CfgMarkerColors are stored as string instead of number resulting in broken 3D marker drawing
- Fixed: Target select entire map caused a script error